fixed overflow bug

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,4 +1,8 @@
 .layout {
   flex-grow: 1;
-  overflow: hidden;
+  overflow: hidden auto;
+
+  &::-webkit-scrollbar-track {
+    margin: 0;
+  }
 }
